--- a/gb/1/2/24/n50744.md
+++ b/gb/1/2/24/n50744.md
@@ -4,60 +4,60 @@
 <tr><td VALIGN=TOP width="626"><h2 align=center>布什政府准备对中国人权记录作首次重大批评</h2>
 <h6></h6>
 <hr>
-	<p>【大纪元2月24日讯】南华早报2001年2月23日刊登格雷格.托罗德(GREG TORODE)发自华盛顿的一篇报导，说到乔治.W.<ahref=http://www.epochtimes.com/news/epochnews/news/Focus.asp?Focus_ID=702><font color=blue>布什</font></A>总统的新行政班子正准备对<ahref=http://www3.epochtimes.com/news/epochnews/main/2.md#1><font color=blue>中国</font></A>人权记录发出其首次重大批评。</p>
+	<p>【大纪元2月24日讯】南华早报2001年2月23日刊登格雷格.托罗德(GREG TORODE)发自华盛顿的一篇报导，说到乔治.W.<font color="blue">布什</font>总统的新行政班子正准备对<font color="blue">中国</font>人权记录发出其首次重大批评。</p>
 <p>报导说，据政府方面的消息，国务院在即将提交的国际人权报告中预期会有大量与中国有关的篇幅，可能对几个关键问题，特别是宗教的压制上，对中国正在不断恶化的状况发出警告。这个报告将在星期一发布，其中有一小部分是关于香港的。</p>
-<p>报导还说，该报告的很多内容是去年年底完成的，但还在进行修改以反映新班子的思想。因此，此报告将首次表示出布什政府打算如何在接触的框架下调整其对华政策，同时处理好人权问题以及对<ahref=http://www3.epochtimes.com/news/epochnews/main/3.md#1><font color=blue>台湾</font></A>和国家安全问题的日益增加的关注。</p>
+<p>报导还说，该报告的很多内容是去年年底完成的，但还在进行修改以反映新班子的思想。因此，此报告将首次表示出布什政府打算如何在接触的框架下调整其对华政策，同时处理好人权问题以及对<font color="blue">台湾</font>和国家安全问题的日益增加的关注。</p>
 <p>一位行政官员说：“我们将会对中国发出一个坚决的早期讯息，接触并不意味着降低我们在人权上的标准，我们的报告将会反映出这一点。”</p>
 <p></p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<B><FONTCOLOR=red>相关文章</FONT></B><br /> &nbsp;&nbsp;&nbsp;&nbsp; </p>
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50689 target=_blank class=ltnn>加州议员计划提议反对北京申奥 </a> (2/23/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50279 target=_blank class=ltnn>【纪元特稿】甘草： 毛泽东怎样教导美国人</a> (2/22/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50251 target=_blank class=ltnn>王丹在中国申奥问题上的立场 </a> (2/22/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50208 target=_blank class=ltnn>国际人权团体: 奥会应正视中共人权劣迹</a> (2/22/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50104 target=_blank class=ltnn>中国因镇压法轮功而降低了争办奥运机会 </a> (2/22/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50070 target=_blank class=ltnn>京都新闻社：鲍威尔敦促布什支持在联合国针对中国人权的行动 </a> (2/22/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=50089 target=_blank class=ltnn>北京良心犯亲属遭骚扰跟踪 </a> (2/22/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=49951 target=_blank class=ltnn>北京申办奥运最后考验 人权问题成为最大变数</a> (2/22/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=49871 target=_blank class=ltnn>[大赦国际]批评以色列草菅人命 </a> (2/21/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=49792 target=_blank class=ltnn>传北京软禁 异见人士</a> (2/21/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=49571 target=_blank class=ltnn>BBC: 中国被指待异见者为精神病 </a> (2/21/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=49561 target=_blank class=ltnn>王丹：美国应该提案谴责中国人权纪录 </a> (2/21/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=49588 target=_blank class=ltnn>【纪元专栏】 萧寒：&#8221;狗权就是人权！&#8221;</a> (2/21/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=49548 target=_blank class=ltnn>世界日报：法轮功学员 当局强制送医 </a> (2/21/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=49450 target=_blank class=ltnn>王丹：美国应该提案谴责中国人权纪录</a> (2/20/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=49433 target=_blank class=ltnn>人权组织反对中国申奥:别让希特勒的风光重演 </a> (2/20/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=49420 target=_blank class=ltnn>加华裔女议员称要象“朋友“一样和中国谈人权</a> (2/20/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=49349 target=_blank class=ltnn>澳门法轮功学员张玉辉“颠覆罪”被起诉</a> (2/20/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=49288 target=_blank class=ltnn>从洛阳轴承厂女工的待遇，看中国的人权现状</a> (2/20/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=49259 target=_blank class=ltnn>加国政府大力协助：张昆仑妻子逃离中国始末</a> (2/20/2001)<br />
+<p>????<b><font color="red">相关文章</font></b><br /> ???? </p>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50689" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">加州议员计划提议反对北京申奥 </a> (2/23/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50279" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">【纪元特稿】甘草： 毛泽东怎样教导美国人</a> (2/22/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50251" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">王丹在中国申奥问题上的立场 </a> (2/22/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50208" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">国际人权团体: 奥会应正视中共人权劣迹</a> (2/22/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50104" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">中国因镇压法轮功而降低了争办奥运机会 </a> (2/22/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50070" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">京都新闻社：鲍威尔敦促布什支持在联合国针对中国人权的行动 </a> (2/22/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=50089" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">北京良心犯亲属遭骚扰跟踪 </a> (2/22/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=49951" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">北京申办奥运最后考验 人权问题成为最大变数</a> (2/22/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=49871" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">[大赦国际]批评以色列草菅人命 </a> (2/21/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=49792" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">传北京软禁 异见人士</a> (2/21/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=49571" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">BBC: 中国被指待异见者为精神病 </a> (2/21/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=49561" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">王丹：美国应该提案谴责中国人权纪录 </a> (2/21/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=49588" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">【纪元专栏】 萧寒：&#8221;狗权就是人权！&#8221;</a> (2/21/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=49548" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">世界日报：法轮功学员 当局强制送医 </a> (2/21/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=49450" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">王丹：美国应该提案谴责中国人权纪录</a> (2/20/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=49433" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">人权组织反对中国申奥:别让希特勒的风光重演 </a> (2/20/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=49420" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">加华裔女议员称要象“朋友“一样和中国谈人权</a> (2/20/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=49349" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">澳门法轮功学员张玉辉“颠覆罪”被起诉</a> (2/20/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=49288" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">从洛阳轴承厂女工的待遇，看中国的人权现状</a> (2/20/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=49259" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">加国政府大力协助：张昆仑妻子逃离中国始末</a> (2/20/2001)</li>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/2/20/n49259.md#1">加国政府大力协助：张昆仑妻子逃离中国始末</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/2/20/n49288.md#1">从洛阳轴承厂女工的待遇，看中国的人权现状</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/2/20/n49349.md#1">澳门法轮功学员张玉辉“颠覆罪”被起诉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/2/20/n49433.md#1">人权组织反对中国申奥:别让希特勒的风光重演</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/25/n11612784.md#1" target="_blank">袁斌：韦君宜的后悔与林牧的反思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/5/n11365941.md#1" target="_blank">【专访】澳参议员：制裁中共 不做迫害同谋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/2/n10015824.md#1" target="_blank">文武：中共篡政（三）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/21/n11398539.md#1" target="_blank">国际宗教自由委员会副主席：20年的迫害太久</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545644.md#1">【未解之谜】古墓竹简惊现秦朝真相 我们都被教科书骗了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/2/n4608491.md#1">日本煎茶道始祖卖茶翁自许卢仝正流  还俗踏上卖茶修行之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/30/n14520972.md#1">【古道人生】好心帮人为何死后遭“雷劈”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536779.md#1">夜奔七百里闯敌营 看奇女子如何报恩还业</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549334.md#1">【时事金扫描】乌克兰抓获中共父子间谍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548988.md#1">【直播】NASA新闻发布会：SpaceX Crew-11任务</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548923.md#1">【佳音时刻】川普警告习：敢动台湾必毁北京</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547473.md#1">神韵要求法庭撤销“毫无根据”的诉讼案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547530.md#1">资不抵债 大陆合资企业广汽菲克宣告破产</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547402.md#1">“0元购”外卖爆单 阿里与美团顶风内卷</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14546820.md#1">陆剧上半年十大最具影响力角色出炉 孙俪称冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547512.md#1">汤唯携9岁女儿现身机场 请求网友别拍到小孩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548151.md#1">获奖无数为何不想拿这奖 周润发设80岁前目标</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546802.md#1">女粉丝带男友看演唱会 鹿晗温暖喊话现场嗨翻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547527.md#1">王嘉尔自曝曾借巨款给好友 再联系方知被骗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547823.md#1">吃西瓜前加上这一物 就不会变得湿软难吃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547034.md#1">美国114岁女人瑞分享长寿秘诀：吃一种食物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548571.md#1">很多人的休假方式都错了？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544778.md#1">步行：治疗7种常见病痛的有效方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542664.md#1">心脏与大脑会记下每一个愤怒的时刻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647110.md#1">奇异救赎——这世上另一个我</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651624.md#1">【佳音时刻】中共官场太荒诞 问责不误升官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651982.md#1">【重播】泰国联合工作组开记者会 泰柬边境局势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/1/2/24/n50744.htm">布什政府准备对中国人权记录作首次重大批评</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/1/2/24/n50744.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
